fix: Added z-index backdrop and options to avatar and backdrop (#210)

--- a/packages/fuselage/src/components/Modal/styles.scss
+++ b/packages/fuselage/src/components/Modal/styles.scss
@@ -22,7 +22,13 @@
 
   &__backdrop {
     position: fixed;
+
+    z-index: 100;
     inset: lengths.inset(0);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
     background-color: colors.neutral(500, $alpha: 0.5);
   }
